# pre-detector-signal

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  result.sh  result.txt
application/: CMakeLists.txt  main.cpp
application/model/: CMakeLists.txt
application/model/headers/: generate_signal.h  model_generator.h  models_mediator.h  pre_dector_signal_class.h
application/model/radio/: CMakeLists.txt
application/model/radio/headers/: signal-to-noise_ratio.h
application/model/radio/modulation_factory/factory/headers/: bpsk_modulation_factory.h
application/model/radio/modulation_factory/factory/src/: bpsk_modulation_factory.cpp
application/model/radio/modulation_factory/products/headers/: modulation_interface.h
application/model/radio/src/: analog-to-digital_conversion.cpp  complex_signal_spectrum.cpp
application/model/radio/tests/: main.cpp
application/model/src/: generate_signal.cpp  model_generator.cpp  models_mediator.cpp  pre_detector_signal_class.cpp
application/qt_app/: CMakeLists.txt
application/qt_app/qt_plotter_view/qt_components/headers/: qt_plotter.h
application/qt_app/qt_plotter_view/qt_components/src/: qt_plotter.cpp
application/utilities/headers/: consts.h
application/utilities/plotter/: main.py  plotter.py
application/utilities/plotter/plotters/: meters.txt
application/utilities/src/: config_parser.cpp
assets/report/: report.aux  report.dvi  report.fdb_latexmk  report.fls  report.tex
correct_library/: CMakeLists.txt  uml.puml
correct_library/encode_data/headers/: encode.h
correct_library/encode_data/src/: encode.cpp
encode_data/: CMakeLists.txt
encode_data/headers/: bitset_to_double.h  diff_decryption.h  diff_encryption.h  diff_encryption_interface.h  encode_word.h  word_to_binary.h
encode_data/src/: bitset_to_double.cpp  diff_decryption.cpp  diff_encryption.cpp  encode_word.cpp  word_to_binary.cpp
model/: CMakeLists.txt
model/headers/: file_mediator.h  frequency_modulation_two.h  generate_model.h  generate_signal.h  model_generator.h  models_mediator.h  modulation_interface.h  noise_generator.h  parameter_model.h  plotter.h  pre_detector_signal_class.h  signal_transmission_model.h
model/proto/: model.proto
model/radio/: CMakeLists.txt
model/radio/headers/: analog-to-digital_conversion.h  antenna_signal_strength.h  binary_phase-shift_keying_modulation.h  complex_signal_spectrum.h  connect_transmitting_receiving.h  demodulation_interface.h  digital-to-analog_conversion.h  frequency_demodulation.h  frequency_modulation.h  frequency_modulation_two.h  generate_signal.h  modulation_abstract.h  modulation_interface.h  phase-shift_keying_demodulation.h  phase-shift_keying_modulation.h  second_order_phase_modulation.h  signal-to-noise_ratio.h
model/radio/modulation_factory/factory/headers/: abstract_modulation_factory.h  bpsk_modulation_factory.h
model/radio/modulation_factory/factory/src/: bpsk_modulation_factory.cpp
model/radio/modulation_factory/headers/: abstract_modulation_factory.h  binary_phase-shift_keying_demodulation.h  binary_phase-shift_keying_modulation.h  bpsk_modulation_factory.h  demodulation_interface.h
model/radio/modulation_factory/products/headers/: binary_phase-shift_keying_demodulation.h  binary_phase-shift_keying_modulation.h  demodulation_interface.h  modulation_interface.h
model/radio/modulation_factory/products/src/: phase-shift_keying_demodulation.cpp  phase-shift_keying_modulation.cpp
model/radio/src/: analog-to-digital_conversion.cpp  antenna_signal_strength.cpp  complex_signal_spectrum.cpp  connect_transmitting_receiving.cpp  digital-to-analog_conversion  frequency_demodulation.cpp  frequency_modulation.cpp  generate_signal.cpp  phase-shift_keying_demodulation.cpp  phase-shift_keying_modulation.cpp  second_order_phase_modulation.cpp  signal-to-noise_ration.cpp  signal_transmission_model.cpp
model/radio/tests/: test_radio.cpp
model/src/: file_mediator.cpp  frequency_modulation_two.cpp  generate_model.cpp  generate_signal.cpp  model_generator.cpp  models_mediator.cpp  parameter_model.cpp  pre_detector_signal_class.cpp  signal_transmission_model.cpp
protos/: model.proto
qt_app/: CMakeLists.txt
qt_app/headers/: qt_main_window_class.h  qt_plotter.h
qt_app/qt_components/headers/: qt_base_component.h  qt_coordinate_tool_tip.h
qt_app/qt_components/src/: qt_coordinate_tool_tip.cpp  qt_main_window_class.cpp
qt_app/qt_components/ui/: qt_plotter.ui
qt_app/qt_mediators/headers/: qt_mediator_inteface.h  qt_plotter_mediator.h
qt_app/qt_mediators/src/: qt_plotter_mediator.cpp
qt_app/qt_plotter_controller/headers/: qt_plotter_controller.h
qt_app/qt_plotter_controller/src/: qt_plotter_controller.cpp
qt_app/qt_plotter_view/qt_components/headers/: qt_base_component.h  qt_coordinate_tool_tip.h  qt_main_window_class.h  qt_plotter.h
qt_app/qt_plotter_view/qt_components/src/: qt_coordinate_tool_tip.cpp  qt_main_window_class.cpp  qt_plotter.cpp
qt_app/qt_plotter_view/qt_components/ui/: qt_coordinate_tool_tip.ui  qt_plotter.ui
qt_app/qt_plotter_view/qt_mediators/headers/: qt_mediator_inteface.h  qt_plotter_mediator.h
qt_app/qt_plotter_view/qt_mediators/src/: qt_plotter_mediator.cpp
qt_app/src/: qt_main_window_class.cpp  qt_plotter.cpp
qt_app/ui/: qt_coordinate_tool_tip.ui  qt_plotter.ui
utilities/: CMakeLists.txt
utilities/headers/: binary_file_manager.h  config_parser.h  consts.h  file_reader.h  json.hpp  plotter.h  qt_utilities.h
utilities/plotter/: file_reader.py  geoid.py
utilities/src/: binary_file_manager.cpp  config_parser.cpp  file_reader.cpp  plotter.cpp
